WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290959
Adding event listener via window API should cause style invalidation
https://bugs.webkit.org/show_bug.cgi?id=290959
Summary
Adding event listener via window API should cause style invalidation
Nikos Mouchtaris
Reported
2025-04-02 16:25:49 PDT
Adding event listener via window API should cause style invalidation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-02 16:28:50 PDT
<
rdar://problem/148471734
>
Nikos Mouchtaris
Comment 2
2025-04-02 16:36:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43499
EWS
Comment 3
2025-04-04 09:31:39 PDT
Committed
293249@main
(f4c6be98ae7d): <
https://commits.webkit.org/293249@main
> Reviewed commits have been landed. Closing PR #43499 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug