Adding event listener via window API should cause style invalidation https://bugs.webkit.org/show_bug.cgi?id=290959 rdar://148471734

Reviewed by Simon Fraser.

When adding touch event handler via window API, ensure the style adjuster code is run.

* Source/WTF/wtf/PlatformEnableCocoa.h:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::wheelOrTouchEventHandlersChanged):
(WebCore::Document::wheelEventHandlersChanged):
(WebCore::Document::didAddTouchEventHandler):
(WebCore::Document::didRemoveTouchEventHandler):
* Source/WebCore/dom/Document.h:
* Source/WebCore/dom/Node.cpp:
(WebCore::tryAddEventListener):
* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::addEventListener):
* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::invalidateContentEventRegionsIfNeeded):

Canonical link: https://commits.webkit.org/293249@main